# rmemdump

./: Cargo.toml  LICENSE  README.md
src/: dump.rs  incremental.rs  main.rs
