[package]
name = "rmemdump"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
] }
fxhash = "0.2.1"
indicatif = "0.17.9"
lz4 = "1.28.0"
memmap2 = "0.9.5"
rayon = "1.10.0"
wyhash2 = "0.2.1"

# Optimize for size
[profile.release]
debug = true
lto = "fat"
panic = "abort"
opt-level = "z"
[profile.release.package.lz4]
opt-level = 3
[profile.release.package.wyhash2]
opt-level = 3
